--- a/a1_report.html
+++ b/a1_report.html
@@ -29,18 +29,18 @@
 <p>Complete (Yes/No)? <strong>yes</strong></p>
 <p>If Yes, include (link) the screen shot image as following using <code>![image caption](images/demo.png)</code> to prove completion, and/or add a link to the question solution if applicable.</p>
 <figure>
-<img src="images/t3-1.png" alt="T2.1" /><figcaption aria-hidden="true">T2.1</figcaption>
+<img src="images/t3-1.png" alt="T3.1" /><figcaption aria-hidden="true">T3.1</figcaption>
 </figure>
 <h3 id="t3.2-xml-xsl-xsd">T3.2 XML &amp; XSL &amp; XSD</h3>
 <p>Complete (Yes/No)? <strong>yes</strong></p>
 <p>If Yes, include (link) the screen shot image as following using <code>![image caption](images/demo.png)</code> to prove completion, and/or add a link to the question solution if applicable.</p>
 <figure>
-<img src="images/t3-2.png" alt="T2.2" /><figcaption aria-hidden="true">T2.2</figcaption>
+<img src="images/t3-2.png" alt="T3.2" /><figcaption aria-hidden="true">T3.2</figcaption>
 </figure>
 <h3 id="t3.3-json">T3.3 JSON</h3>
 <p>Complete (Yes/No)? <strong>yes</strong></p>
 <p>If Yes, include (link) the screen shot image as following using <code>![image caption](images/demo.png)</code> to prove completion, and/or add a link to the question solution if applicable.</p>
-<p><img src="images/t3-3.png" alt="T3.3" /> <img src="images/t3-3-2.png" alt="T3.3" /></p>
+<p><img src="images/t3-3.png" alt="T3.3" /> <img src="images/t3-3-2.png" alt="T3.3 v2" /></p>
 <h2 id="q1-html-css-project">Q1 HTML &amp; CSS project</h2>
 <h3 id="q1.1-html-myindex.html">Q1.1 HTML myindex.html</h3>
 <p>Complete (Yes/No)? <strong>yes</strong></p>
